--- a/apps/site/src/_pages/docs/5_faq.mdx
+++ b/apps/site/src/_pages/docs/5_faq.mdx
@@ -47,13 +47,13 @@ In the future we intend to support non-web contexts more directly.
 
 <FAQ question="Why would anybody build a Block Protocol block?">
 
-Anybody with web development experience can build a block to add functionality to any application that implements the Block Protocol.
+Blocks built for the Block Protocol work inside of multiple embedding applications, with promised support in the future of even more. Creating a Þ block enables a developer to code a block _once_ and then use that same block in a variety of places, without having to make any application-specific affordances to ensure their block functions correctly or looks good.
 
-Individuals may be motivated by any of the factors that already motivate people to build open-source software: challenge, competition, fun, reputation, and the desire to contribute to and be part of a community.
+Anybody with web development experience can build a block to add functionality to an application that implements the Block Protocol. That means if you're the user of a protocol-supporting application such as WordPress or HASH, [developing a Þ block](https://blockprotocol.org/docs/developing-blocks) will enable you to extend that app's capabilities, and take your work with you to other Þ environments should you wish.
 
-Open-sourcing blocks allows other interested users to contribute back to improving those blocks further, enhancing their utility and fixing bugs.
+Blocks don't have to be open-sourced, but we strongly encourage publishing them to the [Þ Hub](https://blockprotocol.org/hub), sharing them with others. You may be motivated to do this by any of the factors that already result in  thiriving open-source software ecosystems today: challenge, competition, fun, reputation, and the desire to contribute to and be part of a community.
 
-Stephen Walli writes that open-sourcing code isn't always "contributing back out of altruism. It was engineering economics. It was the right thing to do, and contributed back to the hardening of the [product] we were using ourselves. It was what makes well run open source projects work."
+Open-sourcing blocks can also be borne of self-interest. Making your code public allows other interested users to contribute back to improving your block further, enhancing its utility and fixing any bugs that may be hiding within. Stephen Walli writes that open-sourcing code isn't always "contributing back out of altruism", but sometimes "engineering economics". It can be the right commercial call, hardening and improving the product (in this case block) that you yourself are relying upon.
 
 </FAQ>
 
