--- a/apps/site/src/_pages/docs/5_faq.mdx
+++ b/apps/site/src/_pages/docs/5_faq.mdx
@@ -227,7 +227,7 @@ Facilitating external API access via the Þ Hub is a new addition to the protoco
   
 <FAQ question="Can blocks access external APIs while authenticating as users?">
   
-The ability for Þ blocks to access external services while (optionally) authenticated as an individual user is a planned capability. A technical solution has been identified which will enable this securely and seamlessly across embedding environments, and we intend to introduce support in the coming months. This will enable blocks to be developed that allow for a much wider range of use-cases to be addressed.
+The ability for Þ blocks to access external services while (optionally) authenticated as an individual user is a capability which we intend to introduce in the coming months. This will enable blocks to be developed that allow for a much wider range of use-cases to be addressed.
   
 **Example:** a block user has information synced to _Coda_ or _AirTable_ from multiple external locations. They want to display this data on their website, which uses WordPress. With the _Block Protocol for WordPress_ plugin, a user will be able to use a _Coda_ or _AirTable_ block which allows them to select information contained within their external account, and insert this information onto their page or post in WordPress, which can then automatically keep itself in sync with the original source. This allows publishing from a wide variety of external sources.
 
