--- a/apps/site/src/_pages/legal/0_index.mdx
+++ b/apps/site/src/_pages/legal/0_index.mdx
@@ -1,5 +1,5 @@
 # Legal
 
 - [Block Protocol Terms of Service](terms)
+- [Block Protocol Data Protection Agreement](terms/dpa)
 - [Block Protocol Privacy Statement](privacy)
-- [Block Protocol Data Protection Agreement](privacy/dpa)
