--- a/apps/site/src/_pages/legal/0_index.mdx
+++ b/apps/site/src/_pages/legal/0_index.mdx
@@ -1,5 +1,8 @@
 # Legal
 
+## Terms of Service
 - [Block Protocol Terms of Service](terms)
-- [Block Protocol Data Protection Agreement](terms/dpa)
+
+## Privacy
 - [Block Protocol Privacy Statement](privacy)
+- [Block Protocol Data Protection Agreement](terms/dpa)
