--- a/apps/site/src/_pages/legal/terms/dpa/0_index.mdx
+++ b/apps/site/src/_pages/legal/terms/dpa/0_index.mdx
@@ -13,7 +13,7 @@ topics:
 
 # Introduction
 
-The parties agree that this Block Protocol Data Protection Agreement (“DPA”) sets forth their obligations with respect to the processing and security of Personal Data and, where explicitly stated in the DPA Terms, Customer Data in connection with the Online Services provided by HASH, Inc. ("the Block Protocol").
+The parties agree that this Block Protocol Data Protection Agreement (“DPA”) sets forth their obligations with respect to the processing and security of Personal Data and, where explicitly stated in the DPA Terms, Customer Data in connection with the Online Services provided by _HASH, Inc._ ("the Block Protocol" and "Block Protocol").
 
 The DPA (including its Appendix and Attachments) is between the Block Protocol and any customer receiving Online Services from the Block Protcool based on the Block Protocol Customer Agreement (“Customer”), and is incorporated by reference into the Block Protocol Customer Agreement.
 
