--- a/apps/site/src/_pages/legal/terms/0_index.mdx
+++ b/apps/site/src/_pages/legal/terms/0_index.mdx
@@ -12,7 +12,7 @@ topics:
   - Legal
 ---
 
-Thank you for using the Block Protocol (**Þ**)! We're happy you're here. Please read this Terms of Service agreement carefully before accessing or using the Block Protocol. Because it is such an important contract between us and our users, we have tried to make it as clear as possible. For your convenience, we have presented these terms in a short non-binding summary followed by the full legal terms.
+Thank you for using the Block Protocol (**Þ**). Please read this _Terms of Service_ agreement carefully before accessing or using the Block Protocol. Because it is such an important contract between us and our users, we have tried to make it as clear as possible. For your convenience, we have presented these terms in a short non-binding summary followed by the full legal terms.
 
 ## Summary
 
