--- a/apps/site/src/_pages/legal/privacy/1_private-information-removal.mdx
+++ b/apps/site/src/_pages/legal/privacy/1_private-information-removal.mdx
@@ -1,5 +1,6 @@
 ---
 title: Block Protocol Private Information Removal Policy
+shortTitle: Private Information Removal Policy
 location: /legal/privacy/private-information-removal
 redirect_from:
   - /private-information-removal
