--- a/apps/site/src/_pages/legal/terms/dpa/0_index.mdx
+++ b/apps/site/src/_pages/legal/terms/dpa/0_index.mdx
@@ -1,5 +1,6 @@
 ---
 title: Block Protocol Data Protection Agreement
+shortTitle: Data Protection Agreement
 location: /legal/terms/dpa
 redirect_from:
   - /legal/dpa
