--- a/apps/site/src/_pages/legal/0_index.mdx
+++ b/apps/site/src/_pages/legal/0_index.mdx
@@ -1,3 +1,12 @@
+---
+title: Block Protocol Legal Policies & Terms
+shortTitle: Legal Policies & Terms
+location: /legal
+topics:
+  - Policy
+  - Legal
+---
+
 # Legal
 
 ## Terms of Service
