--- a/apps/site/src/_pages/acceptable-use/10_appeals.mdx
+++ b/apps/site/src/_pages/acceptable-use/10_appeals.mdx
@@ -28,7 +28,7 @@ Both appeals and reinstatements arise in relation to disabling of content or res
 
 If your account or content has been hidden, disabled, or limited in any other way by the Block Protocol and you would like to request reinstatement or appeal our decision, please reach out using our [contact form](/contact).
 
-In order to prevent unnecessary processing delays, please do not send duplicate requests and be sure to contact us from the email associated with your impacted account if possible. If your content was impacted by a DMCA notice, and you’d like to make changes or dispute that notice, please contact the Block Protocol (via HASH) in accordance with the [HASH DMCA counter-notice guide](https://hash.ai/legal/copyright-dmca-counter-notice).
+In order to prevent unnecessary processing delays, please do not send duplicate requests and be sure to contact us from the email associated with your impacted account if possible.
 
 Block Protocol personnel will review the information provided in the form to determine whether there is sufficient information to warrant reinstatement or granting of an appeal.
 
@@ -39,6 +39,8 @@ All legitimate reinstatement requests will be reviewed initially by Block Protoc
 * **Appeal**: Where a user seeks to dispute a decision, they can use the form to explain their basis for disputing the decision and to provide any additional information regarding the alleged violation that they believe should have led to a different decision. If the information provided demonstrates that a different conclusion should have been reached, we may be able to grant an appeal.
 
 If the Block Protocol reviewer is the same person who made the initial determination and that individual believes their initial conclusion was correct (and thus would be inclined to deny the appeal), a second Block Protocol reviewer will be called upon to independently review the appeal. All legitimate appeals will be answered with a final decision.
+
+If your content was impacted by a DMCA notice, and you’d like to make changes or dispute that notice, please contact the Block Protocol _via HASH_ by following the [HASH DMCA counter-notice guide](https://hash.ai/legal/copyright-dmca-counter-notice).
 
 ## Transparency
 
