--- a/apps/site/src/_pages/legal/privacy/1_private-information-removal.mdx
+++ b/apps/site/src/_pages/legal/privacy/1_private-information-removal.mdx
@@ -26,13 +26,13 @@ For the purposes of this document, “private information” refers to content t
 - [Information](/legal/acceptable-use/doxxing) related to, and posing a security risk to, you as an individual (such as social security numbers or other government identification numbers).
 
 ### Private information removal requests are _not_ appropriate for:
-- Internal server names, IP addresses, and URLs, on their own. You must be able to show that their use in a particular file or piece of code poses a security threat.
-- Mere mentions of your company's identity, name, brand, domain name, or other references to your company in files on the Block Protocol. You must be able to articulate why a use of your company's identity is a threat to your company's security posture.
-- Entire files or repositories that do not pose a specific security risk, but you believe are otherwise objectionable.
-- Requests to remove content that may infringe your or your organization's copyright rights. If you have questions about how the Block Protocol handles copyright-related matters or would like to report potentially infringing content, please review the [HASH Copyright Materials (DMCA) Policy](https://hash.ai/legal/copyright). The private information removal process is generally not intended for the removal of full files or repositories — only for the specific pieces of private information in those files. While there may be cases where files are filled entirely with private information, you must justify the security risk for the removal of such files, and this may increase the time required to process your request.
-- Trademark disputes. If you have questions about how the Block Protocol handles trademark-related matters or would like to report content containing your organization's trade or service marks, please review the [HASH Trademark Complaints Policy](https://hash.ai/legal/trademark-complaints).
-- Privacy complaints. If you wish to access, transfer, change, or delete your personal information on the Block Protocol, please contact us via [our Support website](/contact). 
-- Content governed by our [Community Guidelines](/legal/community), such as malware or general-purpose tools. If you have questions about our Community Guidelines or believe that content on the Block Protocol might violate our guidelines, you can [contact us](/contact).
+- **Internal server names, IP addresses, and URLs, on their own.** You must be able to show that their use in a particular file or piece of code poses a security threat.  The [National Institute of Standards and Technology](https://en.wikipedia.org/wiki/National_Institute_of_Standards_and_Technology) explicitly advises against relying on "security through obscurity".
+- **Mere mentions of your company's identity, name, brand, domain name, or other references to your company in files on the Block Protocol.** You must be able to articulate why a use of your company's identity is a threat to your company's security posture. See the [Block Protcool Impersonation Policy](/legal/acceptable-use/impersonation) and [HASH Trademark Complaints Policy](https://hash.ai/legal/trademark-complaints) for more information.
+- **Entire files or projects** that do not pose a specific security risk, but you believe are otherwise objectionable.
+- **Requests to remove content that may infringe your or your organization's copyright rights.** If you have questions about how the Block Protocol handles copyright-related matters or would like to report potentially infringing content, please review the [HASH Copyright Materials (DMCA) Policy](https://hash.ai/legal/copyright) which governs the Block Protocol website, in addition to all other HASH websites. The private information removal process is generally _not intended_ for the removal of full files or repositories — only for the specific pieces of private information in those files. While there may be cases where files are filled entirely with private information, you must justify the security risk for the removal of such files, and this may increase the time required to process your request.
+- **Trademark disputes.** If you have questions about how the Block Protocol handles trademark-related matters or would like to report content containing your organization's trade or service marks, please review the [HASH Trademark Complaints Policy](https://hash.ai/legal/trademark-complaints).
+- **Privacy complaints.** If you wish to access, transfer, change, or delete your personal information on the Block Protocol, please contact us via [our Support website](/contact). 
+- **Content governed by our [Community Guidelines](/legal/community) and [Acceptable Use](/legal/acceptable-use) policies**, such as [malware](/legal/acceptable-use/malware) or general-purpose tools. If you have questions about our Community Guidelines or believe that content on the Block Protocol might violate our guidelines, you can [contact us](/contact).
 
 ## Things to Know
 
@@ -63,25 +63,26 @@ For the purposes of this document, “private information” refers to content t
 7. **User May Request an Additional Window to Make Changes.** If the user missed their opportunity to remove the private information specified in the notice, we may allow them an additional window of approximately 1 business day, upon request, to make those changes. In that event, the Block Protocol will notify the complainant.
 
 ### What About Forks? (or What's a Fork?)
-The Block Protocol allows users to "fork" one another's projects. In essence, this means that users can make a copy of a project such as a type or a block in the [Block Protocol Hub](/hub) into their own namespace. As the license or the law allows, users can then make changes to that fork to either push back to the main project or just keep as their own variation of a project. Each of these copies is a "fork" of the original project, which in turn may also be called the "parent" of the fork.
 
-The Block Protocol will not automatically disable forks when disabling a parent project. This is because forks belong to different users and may have been altered in significant ways. The Block Protocol does not conduct any independent investigation into forks. We expect those sending private information removal requests to conduct that investigation and, if they believe that the forks also contain private information, expressly include forks in their request.
+**The Block Protocol allows users to "fork" one another's projects.** In essence, this means that users can make a copy of a project such as a type or a block in the [Block Protocol Hub](/hub) into their own namespace. As the license or the law allows, users can then make changes to that fork to either push back to the main project or just keep as their own variation of a project. Each of these copies is a "fork" of the original project, which in turn may also be called the "parent" of the fork.
+
+**The Block Protocol will not automatically disable forks when disabling a parent project.** This is because forks belong to different users and may have been altered in significant ways. The Block Protocol does not conduct any independent investigation into forks. We expect those sending private information removal requests to conduct that investigation and, if they believe that the forks also contain private information, expressly include forks in their request.
 
 If at the time that you submitted your notice, you identified all existing forks of that projects, we would process a valid claim against all forks in that network at the time we process the notice. We would do this given the likelihood that all newly created forks would contain the same content. In addition, if the reported network that contains the reported content is larger than one hundred (100) projects and thus would be difficult to review in its entirety, we may consider disabling the entire network if you state in your notice that, based on the representative number of forks you have reviewed, you believe that all or most of the forks contain the content reported in the parent project.
 
 ## Sending A Private Information Removal Request
 
-Due to the type of content the Block Protocol hosts (mostly software code) and the way that content is managed (with Git), we need complaints to be as specific as possible. In order for us to verify that a user has removed reported private information completely, we need to know exactly where to look.
+**Make your request specific.** Due to the type of content the Block Protocol hosts (mostly software code) and the way that content is managed (with Git), we need complaints to be as specific as possible. In order for us to verify that a user has removed reported private information completely, we need to know exactly where to look.
 
 These guidelines are designed to make the processing of requests to remove private information as straightforward as possible.
 
 ### Your Request Must Include:
 
 1. A working, clickable link to each file within a project containing private information. (Note that we're not able to work from search results, examples, or screenshots.)
-2. Specific line numbers within each file containing the private information.
-3. A brief description of how each item you've identified poses a security risk to you or your organization. ***It is important that you provide an explanation of how the data poses a security risk beyond merely stating that it does.***
-4. If you are a third party acting as an agent for an organization facing a security risk, include a statement that you have a legal right to act on behalf of that organization.
-5. OPTIONAL: Let us know if your request is particularly urgent, and why. We respond to all private information removal requests as quickly as possible. However, if this request is especially time-sensitive, such as a very recent credential exposure, please explain why.
+1. Specific line numbers within each file containing the private information.
+1. A brief description of how each item you've identified poses a security risk to you or your organization. ***It is important that you provide an explanation of how the data poses a security risk beyond merely stating that it does.***
+1. If you are a third party acting as an agent for an organization facing a security risk, include a statement that you have a legal right to act on behalf of that organization.
+1. **Optional:** Let us know if your request is particularly urgent, and why. We respond to all private information removal requests as quickly as possible. However, if this request is especially time-sensitive, such as a very recent credential exposure, please explain why.
 
 ## How to Submit Your Request
 
