--- a/apps/site/src/_pages/acceptable-use/2_bullying.mdx
+++ b/apps/site/src/_pages/acceptable-use/2_bullying.mdx
@@ -3,6 +3,7 @@ title: Block Protocol Bullying and Harassment Policy
 shortTitle: Bullying and Harassment
 location: /legal/acceptable-use/bullying
 redirect_from:
+  - /acceptable-use/bullying
   - /legal/terms/bullying
   - /legal/privacy/bullying
   - /privacy/bullying
