--- a/apps/site/src/_pages/acceptable-use/3_disruption.mdx
+++ b/apps/site/src/_pages/acceptable-use/3_disruption.mdx
@@ -3,6 +3,8 @@ title: Block Protocol Disruptive Behavior Policy
 shortTitle: Disruptive Behavior
 location: /legal/acceptable-use/disruption
 redirect_from:
+  - /acceptable-use/disruption
+  - /acceptable-use/disruptive
   - /legal/terms/disruption
   - /legal/terms/disruptive
   - /legal/privacy/disruption
