--- a/apps/site/src/_pages/acceptable-use/11_appeals.mdx
+++ b/apps/site/src/_pages/acceptable-use/11_appeals.mdx
@@ -3,6 +3,7 @@ title: Block Protocol Appeals Policy
 shortTitle: Appeals
 location: /legal/acceptable-use/appeals
 redirect_from:
+  - /acceptable-use/appeals
   - /legal/terms/appeals
   - /legal/privacy/appeals
   - /privacy/appeals
