--- a/apps/site/src/_pages/acceptable-use/4_doxxing.mdx
+++ b/apps/site/src/_pages/acceptable-use/4_doxxing.mdx
@@ -3,6 +3,7 @@ title: Block Protocol Doxxing and Invasion of Privacy Policy
 shortTitle: Doxxing and Invasion of Privacy
 location: /legal/acceptable-use/doxxing
 redirect_from:
+  - /acceptable-use/doxxing
   - /legal/terms/doxxing
   - /legal/privacy/doxxing
   - /privacy/doxxing
