--- a/apps/site/src/_pages/acceptable-use/5_discrimination.mdx
+++ b/apps/site/src/_pages/acceptable-use/5_discrimination.mdx
@@ -3,6 +3,7 @@ title: Block Protocol Hate Speech and Discrimination Policy
 shortTitle: Hate Speech and Discrimination
 location: /legal/acceptable-use/discrimination
 redirect_from:
+  - /acceptable-use/discrimination
   - /legal/terms/discrimination
   - /legal/privacy/discrimination
   - /privacy/discrimination
