--- a/apps/site/src/_pages/acceptable-use/6_impersonation.mdx
+++ b/apps/site/src/_pages/acceptable-use/6_impersonation.mdx
@@ -3,6 +3,7 @@ title: Block Protocol Impersonation Policy
 shortTitle: Impersonation
 location: /legal/acceptable-use/impersonation
 redirect_from:
+  - /acceptable-use/impersonation
   - /legal/terms/impersonation
   - /legal/privacy/impersonation
   - /privacy/impersonation
