--- a/apps/site/src/_pages/acceptable-use/7_veracity.mdx
+++ b/apps/site/src/_pages/acceptable-use/7_veracity.mdx
@@ -3,6 +3,7 @@ title: Block Protocol Misinformation and Disinformation Policy
 shortTitle: Misinformation and Disinformation Policy
 location: /legal/acceptable-use/veracity
 redirect_from:
+  - /acceptable-use/veracity
   - /legal/terms/veracity
   - /legal/privacy/veracity
   - /privacy/veracity
