--- a/apps/site/src/_pages/acceptable-use/8_obscenity.mdx
+++ b/apps/site/src/_pages/acceptable-use/8_obscenity.mdx
@@ -3,6 +3,7 @@ title: Block Protocol Obscene Content Policy
 shortTitle: Obscene Content
 location: /legal/acceptable-use/obscenity
 redirect_from:
+  - /acceptable-use/obscenity
   - /legal/terms/obscenity
   - /legal/privacy/obscenity
   - /privacy/obscenity
