--- a/apps/site/src/_pages/acceptable-use/9_violence.mdx
+++ b/apps/site/src/_pages/acceptable-use/9_violence.mdx
@@ -3,6 +3,7 @@ title: Block Protocol Violent Content Policy
 shortTitle: Violent Content
 location: /legal/acceptable-use/violence
 redirect_from:
+  - /acceptable-use/violence
   - /legal/terms/violence
   - /legal/privacy/violence
   - /privacy/violence
