--- a/apps/site/src/_pages/legal/privacy/3_cookies.mdx
+++ b/apps/site/src/_pages/legal/privacy/3_cookies.mdx
@@ -17,7 +17,7 @@ The Block Protocol provides a great deal of transparency regarding how we use yo
 
 Since the number and names of cookies may change, the table below may be updated from time to time. 
 
-## Cookie information
+## Cookie details
 
 <!-- Cookie table -->
 
